@@ -32,6 +32,8 @@ endif::[]
   This makes it easier to differ distinct snapshot builds of the same version.
   Example: `1.18.1-SNAPSHOT.4655910`
 * Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
+* Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
+  (will be treated as `ERROR`) - {pull}1431[1431]
 
 [float]
 ===== Bug fixes
